--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -89,8 +89,8 @@
       color: var(--accent-color);
     }
 
-    &:hover .social-icon,
-    &:focus .social-icon {
+    &:hover .header__social-icon,
+    &:focus .header__social-icon {
       fill: var(--accent-color);
     }
 
