--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -17,7 +17,7 @@
     padding-right: 15px;
   }
   &-3 {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
