--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,26 +1,28 @@
 .container {
+  // width: 1200px;
   width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 
-  &-1 {
-    width: 500px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  &-2 {
-    width: 570px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  &-3 {
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 50px;
-  }
+  // &-1 {
+  //   width: 500px;
+  //   margin: 0 auto;
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  // }
+  // &-2 {
+  //   width: 570px;
+  //   margin: 0 auto;
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  // }
+  // &-3 {
+  //   // width: 1200px;
+  //   width: 100%;
+  //   margin: 0 auto;
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  //   margin-bottom: 50px;
+  // }
 }
