--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,22 +2,28 @@
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--bg-color-2);
-  &-list {
-    display: flex;
-  }
+  // &-list {
+  //   // display: flex;
+  // }
   &-list__item {
-    margin-right: 30px;
+    // margin-right: 30px;
     flex-basis: calc(100% / 3 - 30px);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
+    margin-bottom: 30px;
+    width: 100%;
+
     &:last-child {
-      margin-right: 0;
+      // margin-right: 0;
+      margin-bottom: 0;
     }
   }
   &-item__under {
     padding: 30px 0 30px 0;
+    margin-bottom: 30px;
+    width: 100%;
   }
   &-list__title {
     font-weight: 500;
@@ -38,14 +44,15 @@
   }
 }
 
-.team__section {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-}
+// .team__section {
+//   // display: flex;
+//   // align-items: center;
+//   // justify-content: space-between;
+//   // flex-direction: column;
+// }
 
 .h2 {
+  align-self: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -81,14 +88,14 @@
   background-color: var(--third-text-color);
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: var(--accent-color);
-  }
-  &:hover .social-list__icon,
-  &:focus .social-list__icon {
-    fill: var(--third-text-color);
-  }
+}
+.social-list__link:hover,
+.social-list__link:focus {
+  background-color: var(--accent-color);
+}
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
+  fill: var(--third-text-color);
 }
 
 .social-list__icon {
