--- a/css/main.css
+++ b/css/main.css
@@ -362,8 +362,13 @@ h1 {
   text-align: center;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 .h2 {
-  align-self: center;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
