--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -51,8 +51,12 @@
 //   // flex-direction: column;
 // }
 
+img {
+  width: 100%;
+  height: 100%;
+}
 .h2 {
-  align-self: center;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
