--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,6 +1,8 @@
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--bg-color-2);
   // &-list {
   //   // display: flex;
@@ -22,7 +24,7 @@
   }
   &-item__under {
     padding: 30px 0 30px 0;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     width: 100%;
   }
   &-list__title {
