--- a/css/main.css
+++ b/css/main.css
@@ -324,22 +324,69 @@ h1 {
   background-color: var(--bg-color-2);
 }
 
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    display: flex;
+  }
+}
+
 .team-list__item {
-  flex-basis: calc(100% / 3 - 30px);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
-  margin-bottom: 30px;
   width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    margin-right: 30px;
+    margin-left: 0;
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-list__item:last-child {
   margin-bottom: 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .team-list__item:last-child {
+    margin-right: 0;
+  }
+}
+
 .team-item__under {
   padding: 30px 0 30px 0;
   width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item__under {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
 }
 
 .team-list__title {
@@ -361,9 +408,32 @@ h1 {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .team__section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
+
 img {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  img {
+    width: 354px;
+    height: 374px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  img {
+    width: 260px;
+    height: 270px;
+  }
 }
 
 .h2 {
@@ -1011,5 +1081,23 @@ button:active, button:hover {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
