--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,28 +1,55 @@
 .team {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--bg-color-2);
-  // &-list {
-  //   // display: flex;
-  // }
+
+  &-list {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
+  }
   &-list__item {
+    @media screen and (min-width: 768px) {
+      flex-basis: calc(100% / 2 - 30px);
+      margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+      margin-left: 0;
+      flex-basis: calc(100% / 4 - 30px);
+    }
     // margin-right: 30px;
-    flex-basis: calc(100% / 3 - 30px);
+    // flex-basis: calc(100% / 3 - 30px);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     width: 100%;
 
     &:last-child {
+      @media screen and (min-width: 1200px) {
+        margin-right: 0;
+      }
       // margin-right: 0;
       margin-bottom: 0;
     }
   }
   &-item__under {
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
     padding: 30px 0 30px 0;
     // margin-bottom: 30px;
     width: 100%;
@@ -46,16 +73,26 @@
   }
 }
 
-// .team__section {
-//   // display: flex;
-//   // align-items: center;
-//   // justify-content: space-between;
-//   // flex-direction: column;
-// }
+.team__section {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
 
 img {
   width: 100%;
   height: 100%;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 374px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 260px;
+    height: 270px;
+  }
 }
 .h2 {
   text-align: center;
