--- a/css/main.css
+++ b/css/main.css
@@ -335,13 +335,13 @@ h1 {
   .team-list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team-list {
     display: flex;
+    margin-left: 0;
   }
 }
 
@@ -356,14 +356,29 @@ h1 {
   .team-list__item {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  .team-list__item:nth-of-type(1) {
+    margin-left: 0;
+  }
+  .team-list__item:nth-of-type(3) {
+    margin-bottom: 0;
+    margin-left: 0;
+  }
+  .team-list__item:nth-of-type(4) {
+    margin-bottom: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team-list__item {
     margin-right: 30px;
+    margin-bottom: 0;
     margin-left: 0;
     flex-basis: calc(100% / 4 - 30px);
+  }
+  .team-list__item:last-child {
+    margin-right: 0;
   }
 }
 
@@ -431,8 +446,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   img {
-    width: 260px;
-    height: 270px;
+    width: 270px;
+    height: 260px;
   }
 }
 
@@ -443,7 +458,13 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .h2 {
+    margin-bottom: 50px;
+  }
 }
 
 .social-list {
