--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -12,19 +12,35 @@
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
-      margin-left: -30px;
+      // margin-left: -30px;
     }
     @media screen and (min-width: 1200px) {
       display: flex;
+      margin-left: 0;
     }
   }
   &-list__item {
     @media screen and (min-width: 768px) {
       flex-basis: calc(100% / 2 - 30px);
       margin-left: 30px;
+      margin-bottom: 30px;
+      &:nth-of-type(1) {
+        margin-left: 0;
+      }
+      &:nth-of-type(3) {
+        margin-bottom: 0;
+        margin-left: 0;
+      }
+      &:nth-of-type(4) {
+        margin-bottom: 0;
+      }
     }
     @media screen and (min-width: 1200px) {
       margin-right: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
+      margin-bottom: 0;
       margin-left: 0;
       flex-basis: calc(100% / 4 - 30px);
     }
@@ -90,18 +106,21 @@ img {
     height: 374px;
   }
   @media screen and (min-width: 1200px) {
-    width: 260px;
-    height: 270px;
+    width: 270px;
+    height: 260px;
   }
 }
 .h2 {
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
   text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .social-list {
