--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -44,6 +44,7 @@
       margin-left: 0;
       flex-basis: calc(100% / 4 - 30px);
     }
+    margin-bottom: 30px;
     // margin-right: 30px;
     // flex-basis: calc(100% / 3 - 30px);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
