--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -1,7 +1,20 @@
 .products {
+  @media screen and (min-width: 320px) and (max-width: 1199px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+
   padding-bottom: 94px;
   &-list {
-    display: flex;
+    @media screen and (min-width: 320px) and (max-width: 1199px) {
+      display: none;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
 
   &-list__item {
