--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -1,3 +1,9 @@
+.products__img {
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    height: 294px;
+  }
+}
 .products {
   @media screen and (min-width: 320px) and (max-width: 1199px) {
     display: none;
