--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -17,7 +17,7 @@
 }
 .points__section {
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
   flex-direction: column;
 }
@@ -41,7 +41,7 @@
 }
 
 .symbols-list {
-  display: flex;
+  // display: flex;
   margin-bottom: 30px;
 }
 
