--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,6 @@ body {
 
 .points__section {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   flex-direction: column;
 }
@@ -221,7 +220,6 @@ body {
 }
 
 .symbols-list {
-  display: flex;
   margin-bottom: 30px;
 }
 
@@ -544,29 +542,104 @@ img {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.clients__block {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
 }
 
 .clients-list {
   display: flex;
-}
-
-.clients-list__item {
-  width: 170px;
-  height: 92px;
-  margin-right: 30px;
-}
-
-.clients-list__item:last-child {
+  flex-wrap: wrap;
   margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .clients-list__item {
+    width: 210px;
+    height: 92px;
+    width: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients-list__item:nth-of-type(2n) {
+    margin-right: 0;
+  }
+  .clients-list__item:nth-of-type(5) {
+    margin-bottom: 0;
+  }
+  .clients-list__item:nth-of-type(6) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    width: 226px;
+    height: 92px;
+    width: calc(100% / 3 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients-list__item:nth-of-type(3n) {
+    margin-right: 0;
+  }
+  .clients-list__item:nth-of-type(4) {
+    margin-bottom: 0;
+  }
+  .clients-list__item:nth-of-type(5) {
+    margin-bottom: 0;
+  }
+  .clients-list__item:nth-of-type(6) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    width: 170px;
+    height: 92px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    margin-left: 0;
+    flex-basis: calc(100% / 4 - 30px);
+  }
+  .clients-list__item:last-child {
+    margin-right: 0;
+  }
+  .clients-list__item:nth-of-type(3) {
+    margin-right: 30px;
+  }
 }
 
 .clients-list__link {
