--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,26 +1,97 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  padding-top: 60px;
+  padding-bottom: 60px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
 
   &__block {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+    }
   }
 
   &-list {
     display: flex;
+    flex-wrap: wrap;
+    margin-right: 0;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: 0;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      flex-wrap: nowrap;
+      margin-right: 0;
+    }
   }
 
   &-list__item {
-    width: 170px;
-    height: 92px;
-    margin-right: 30px;
-
-    &:last-child {
-      margin-right: 0;
+    @media screen and (max-width: 767px) {
+      width: 210px;
+      height: 92px;
+      width: calc(100% / 2 - 30px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-of-type(2n) {
+        margin-right: 0;
+      }
+      &:nth-of-type(5) {
+        margin-bottom: 0;
+      }
+      &:nth-of-type(6) {
+        margin-bottom: 0;
+      }
     }
+
+    // width: 170px;
+    // height: 92px;
+    // margin-right: 30px;
+    @media screen and (min-width: 768px) {
+      width: 226px;
+      height: 92px;
+      width: calc(100% / 3 - 30px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-of-type(3n) {
+        margin-right: 0;
+      }
+      &:nth-of-type(4) {
+        margin-bottom: 0;
+      }
+      &:nth-of-type(5) {
+        margin-bottom: 0;
+      }
+      &:nth-of-type(6) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+      height: 92px;
+      margin-right: 30px;
+      margin-bottom: 30px;
+      margin-left: 0;
+      flex-basis: calc(100% / 4 - 30px);
+      &:last-child {
+        margin-right: 0;
+      }
+      &:nth-of-type(3) {
+        margin-right: 30px;
+      }
+    }
+    // margin-bottom: 30px;
+    // &:last-child {
+    //   margin-right: 0;
+    // }
   }
 
   &-list__link {
