--- a/css/main.css
+++ b/css/main.css
@@ -588,7 +588,7 @@ img {
   .clients-list__item {
     width: 210px;
     height: 92px;
-    width: calc(100% / 2 - 30px);
+    width: calc(100% / 2 - 30px 0);
     margin-right: 30px;
     margin-bottom: 30px;
   }
@@ -607,7 +607,7 @@ img {
   .clients-list__item {
     width: 226px;
     height: 92px;
-    width: calc(100% / 3 - 30px);
+    width: calc(100% / 3 - 30px 0);
     margin-right: 30px;
     margin-bottom: 30px;
   }
@@ -632,7 +632,7 @@ img {
     margin-right: 30px;
     margin-bottom: 30px;
     margin-left: 0;
-    flex-basis: calc(100% / 4 - 30px);
+    flex-basis: calc(100% / 4 - 30px 0);
   }
   .clients-list__item:last-child {
     margin-right: 0;
