--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -38,7 +38,8 @@
     @media screen and (max-width: 767px) {
       width: 210px;
       height: 92px;
-      width: calc(100% / 2 - 30px);
+      width: calc(100% / 2 - 30px 0);
+
       margin-right: 30px;
       margin-bottom: 30px;
       &:nth-of-type(2n) {
@@ -58,7 +59,7 @@
     @media screen and (min-width: 768px) {
       width: 226px;
       height: 92px;
-      width: calc(100% / 3 - 30px);
+      width: calc(100% / 3 - 30px 0);
       margin-right: 30px;
       margin-bottom: 30px;
       &:nth-of-type(3n) {
@@ -80,7 +81,7 @@
       margin-right: 30px;
       margin-bottom: 30px;
       margin-left: 0;
-      flex-basis: calc(100% / 4 - 30px);
+      flex-basis: calc(100% / 4 - 30px 0);
       &:last-child {
         margin-right: 0;
       }
