--- a/css/main.css
+++ b/css/main.css
@@ -179,26 +179,15 @@ body {
 .points {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-.points-list {
-  display: flex;
-  flex-direction: row;
-}
-
-.points-list__item {
-  margin-right: 30px;
-  width: 270px;
-}
-
-.points-list__item:last-child {
-  margin-right: 0;
+  margin-bottom: 94px;
 }
 
 .points__section {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  margin-bottom: 94px;
 }
 
 .points-list__title {
@@ -219,7 +208,13 @@ body {
   color: var(--second-text-color);
 }
 
+.symbols__under {
+  padding: 30px 0 30px 0;
+  width: 100%;
+}
+
 .symbols-list {
+  display: flex;
   margin-bottom: 30px;
 }
 
