--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -1,25 +1,36 @@
 .points {
+  // @media screen and (min-width: 1200px) {
+  //   padding-top: 94px;
+  //   padding-bottom: 94px;
+  // }
+
+  // padding-top: 60px;
+  // padding-bottom: 60px;
+
   padding-top: 94px;
   padding-bottom: 94px;
+  margin-bottom: 94px;
 
-  &-list {
-    display: flex;
-    flex-direction: row;
-  }
+  // &-list {
 
-  &-list__item {
-    margin-right: 30px;
-    width: 270px;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+  //   display: flex;
+  //   flex-direction: row;
+  // }
+
+  // &-list__item {
+  //   margin-right: 30px;
+  //   width: 270px;
+  //   &:last-child {
+  //     margin-right: 0;
+  //   }
+  // }
 }
 .points__section {
   display: flex;
-  // align-items: center;
+  align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  margin-bottom: 94px;
 }
 
 .points-list__title {
@@ -39,9 +50,13 @@
   letter-spacing: 0.03em;
   color: var(--second-text-color);
 }
-
+.symbols__under {
+  padding: 30px 0 30px 0;
+  // margin-bottom: 30px;
+  width: 100%;
+}
 .symbols-list {
-  // display: flex;
+  display: flex;
   margin-bottom: 30px;
 }
 
