--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -1,15 +1,12 @@
 .points {
-  // @media screen and (min-width: 1200px) {
-  //   padding-top: 94px;
-  //   padding-bottom: 94px;
-  // }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    margin-bottom: 94px;
+  }
 
-  // padding-top: 60px;
-  // padding-bottom: 60px;
-
-  padding-top: 94px;
-  padding-bottom: 94px;
-  margin-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   // &-list {
 
@@ -27,10 +24,12 @@
 }
 .points__section {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  margin-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
 }
 
 .points-list__title {
@@ -56,16 +55,26 @@
   width: 100%;
 }
 .symbols-list {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    // margin-left: -30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
   margin-bottom: 30px;
 }
 
 .symbols-list__item {
-  width: 270px;
-  height: 120px;
-  margin-right: 30px;
-  &:last-child {
-    margin-right: 0;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    height: 120px;
+    margin-right: 30px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
