--- a/css/main.css
+++ b/css/main.css
@@ -189,10 +189,6 @@ body {
   }
 }
 
-.points__section {
-  display: flex;
-}
-
 @media screen and (min-width: 1200px) {
   .points__section {
     display: flex;
@@ -210,6 +206,12 @@ body {
   text-transform: uppercase;
   color: var(--first-text-color);
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .points-list__title {
+    text-align: center;
+  }
 }
 
 .points-list__pre-title {
@@ -239,11 +241,30 @@ body {
 @media screen and (min-width: 1200px) {
   .symbols-list {
     display: flex;
+    flex-wrap: nowrap;
   }
 }
 
 .symbols-list__item {
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .symbols-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .symbols-list__item .symbols-list__item:nth-of-type(2) {
+    margin-right: 0;
+  }
+  .symbols-list__item .symbols-list__item:nth-of-type(4) {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .symbols-list__item .symbols-list__item:nth-of-type(3) {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -257,13 +278,46 @@ body {
   }
 }
 
-.symbols-list__link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--bg-color-2);
+.symbols-list__item:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .symbols-list__link {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .symbols-list__link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+  .symbols-list__link {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: 100%;
+    height: 100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
 }
 
 .symbols-list__icon {
