--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -23,7 +23,6 @@
   // }
 }
 .points__section {
-  display: flex;
   @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
@@ -33,6 +32,9 @@
 }
 
 .points-list__title {
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -62,12 +64,28 @@
   }
   @media screen and (min-width: 1200px) {
     display: flex;
+    flex-wrap: nowrap;
   }
   margin-bottom: 30px;
 }
 
 .symbols-list__item {
   margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+    .symbols-list__item:nth-of-type(2) {
+      margin-right: 0;
+    }
+    .symbols-list__item:nth-of-type(4) {
+      margin-right: 0;
+      margin-bottom: 0;
+    }
+    .symbols-list__item:nth-of-type(3) {
+      margin-bottom: 0;
+    }
+  }
   @media screen and (min-width: 1200px) {
     width: 270px;
     height: 120px;
@@ -77,14 +95,40 @@
     }
   }
 }
+.symbols-list__item:last-child {
+  margin-bottom: 0;
+}
 
 .symbols-list__link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--bg-color-2);
+  @media screen and (min-width: 1200px) {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
+  @media screen and (min-width: 768px) {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
+  @media screen and (min-width: 1px) and (max-width: 767px) {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: 100%;
+    height: 100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-2);
+  }
 }
 
 .symbols-list__icon {
