--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,7 @@ body {
 }
 
 .symbols-list {
+  margin-right: 0;
   margin-bottom: 30px;
 }
 
@@ -251,18 +252,18 @@ body {
 
 @media screen and (min-width: 768px) {
   .symbols-list__item {
-    flex-basis: calc(100% / 2 - 30px);
+    width: calc(100% / 2 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
   }
-  .symbols-list__item .symbols-list__item:nth-of-type(2) {
+  .symbols-list__item:nth-of-type(2) {
     margin-right: 0;
   }
-  .symbols-list__item .symbols-list__item:nth-of-type(4) {
+  .symbols-list__item:nth-of-type(4) {
     margin-right: 0;
     margin-bottom: 0;
   }
-  .symbols-list__item .symbols-list__item:nth-of-type(3) {
+  .symbols-list__item:nth-of-type(3) {
     margin-bottom: 0;
   }
 }
@@ -271,6 +272,9 @@ body {
   .symbols-list__item {
     width: 270px;
     height: 120px;
+    margin-right: 30px;
+  }
+  .symbols-list__item:nth-of-type(2) {
     margin-right: 30px;
   }
   .symbols-list__item:last-child {
@@ -294,10 +298,10 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .symbols-list__link {
-    width: 100%;
-    height: 100%;
+    width: 354px;
+    height: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
