--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -57,6 +57,7 @@
   width: 100%;
 }
 .symbols-list {
+  margin-right: 0;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -72,17 +73,17 @@
 .symbols-list__item {
   margin-bottom: 30px;
   @media screen and (min-width: 768px) {
-    flex-basis: calc(100% / 2 - 30px);
+    width: calc(100% / 2 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
-    .symbols-list__item:nth-of-type(2) {
+    &:nth-of-type(2) {
       margin-right: 0;
     }
-    .symbols-list__item:nth-of-type(4) {
+    &:nth-of-type(4) {
       margin-right: 0;
       margin-bottom: 0;
     }
-    .symbols-list__item:nth-of-type(3) {
+    &:nth-of-type(3) {
       margin-bottom: 0;
     }
   }
@@ -90,6 +91,9 @@
     width: 270px;
     height: 120px;
     margin-right: 30px;
+    &:nth-of-type(2) {
+      margin-right: 30px;
+    }
     &:last-child {
       margin-right: 0;
     }
@@ -109,9 +113,9 @@
     justify-content: center;
     background-color: var(--bg-color-2);
   }
-  @media screen and (min-width: 768px) {
-    width: 100%;
-    height: 100%;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    height: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
