--- a/css/main.css
+++ b/css/main.css
@@ -256,14 +256,13 @@ body {
     margin-right: 30px;
     margin-bottom: 30px;
   }
-  .symbols-list__item:nth-of-type(2) {
+  .symbols-list__item:nth-of-type(2n) {
     margin-right: 0;
-  }
-  .symbols-list__item:nth-of-type(4) {
-    margin-right: 0;
-    margin-bottom: 0;
   }
   .symbols-list__item:nth-of-type(3) {
+    margin-bottom: 0;
+  }
+  .symbols-list__item:nth-of-type(4) {
     margin-bottom: 0;
   }
 }
