--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -72,18 +72,32 @@
 
 .symbols-list__item {
   margin-bottom: 30px;
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  //   width: calc(100% / 2 - 30px);
+  //   margin-right: 30px;
+  //   margin-bottom: 30px;
+  //   &:nth-of-type(2) {
+  //     margin-right: 0;
+  //   }
+  //   &:nth-of-type(4) {
+  //     margin-right: 0;
+  //     margin-bottom: 0;
+  //   }
+  //   &:nth-of-type(3) {
+  //     margin-bottom: 0;
+  //   }
+  // }
   @media screen and (min-width: 768px) {
     width: calc(100% / 2 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
-    &:nth-of-type(2) {
+    &:nth-of-type(2n) {
       margin-right: 0;
-    }
-    &:nth-of-type(4) {
-      margin-right: 0;
-      margin-bottom: 0;
     }
     &:nth-of-type(3) {
+      margin-bottom: 0;
+    }
+    &:nth-of-type(4) {
       margin-bottom: 0;
     }
   }
