--- a/css/main.css
+++ b/css/main.css
@@ -350,9 +350,17 @@ h1 {
 }
 
 .main-title {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-mobile-1x.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .main-title {
+    background-image: url(../images/bg-img-mobile-2x.jpg);
+  }
 }
 
 @media screen and (min-width: 1200px) {
