--- a/sass/components/_title-section.scss
+++ b/sass/components/_title-section.scss
@@ -17,11 +17,18 @@ h1 {
   flex-direction: column;
 }
 .main-title {
+  background-repeat: no-repeat;
+  background-size: cover;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/bg-img-mobile-2x.jpg);
+  }
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bg-img.jpg);
+    url(../images/bg-img-mobile-1x.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
 }
