--- a/css/main.css
+++ b/css/main.css
@@ -350,16 +350,46 @@ h1 {
 }
 
 .main-title {
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-mobile-1x.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (min-width: 1px) and (max-width: 767px) {
   .main-title {
-    background-image: url(../images/bg-img-mobile-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-mobile-1x.jpg);
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (min-width: 1px) and (max-width: 767px) and (min-resolution: 192dpi), screen and (min-width: 1px) and (max-width: 767px) and (min-resolution: 2dppx) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-mobile-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-tablet-1x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-tablet-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-2x.jpg);
   }
 }
 
