--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,6 +1,10 @@
 // main index btn
 
 .main-title__btn {
+  @media screen and (min-width: 1200px) {
+    left: 700px;
+    top: 430px;
+  }
   background-color: var(--accent-color);
   font-family: Roboto, sans-serif;
   font-weight: 700;
@@ -11,8 +15,11 @@
   margin-top: 40px;
   width: 200px;
   height: 50px;
-  left: 700px;
-  top: 430px;
+  left: 140px;
+  top: 292px;
+  align-self: center;
+  // left: 700px;
+  // top: 430px;
   border-radius: 4px;
   text-align: center;
   letter-spacing: 0.03em;
