--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -52,6 +52,22 @@
   color: var(--second-text-color);
 }
 .symbols__under {
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2 - 30px 0);
+    width: 354px;
+    // margin-right: 30px;
+    // margin-bottom: 30px;
+    // &:nth-of-type(2n) {
+    //   margin-right: 0;
+    // }
+    // &:nth-of-type(3) {
+    //   margin-bottom: 0;
+    // }
+    // &:nth-of-type(4) {
+    //   margin-bottom: 0;
+    // }
+  }
+
   padding: 30px 0 30px 0;
   // margin-bottom: 30px;
   width: 100%;
@@ -88,7 +104,7 @@
   //   }
   // }
   @media screen and (min-width: 768px) {
-    width: calc(100% / 2 - 30px);
+    width: calc(100% / 2 - 30px 0);
     margin-right: 30px;
     margin-bottom: 30px;
     &:nth-of-type(2n) {
