--- a/css/main.css
+++ b/css/main.css
@@ -486,7 +486,7 @@ h1 {
   color: #ffffff;
   padding: 27px 82px;
   background-color: rgba(47, 48, 58, 0.8);
-  width: 100%;
+  width: 370px;
   position: absolute;
   top: 224px;
   left: 0;
@@ -607,20 +607,20 @@ h1 {
   }
 }
 
-img {
+.team__img {
   width: 100%;
   height: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  img {
+  .team__img {
     width: 354px;
     height: 374px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  img {
+  .team__img {
     width: 270px;
     height: 260px;
   }
