--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -49,7 +49,7 @@
   color: #ffffff;
   padding: 27px 82px;
   background-color: rgba(47, 48, 58, 0.8);
-  width: 100%;
+  width: 370px;
   position: absolute;
   top: 224px;
   left: 0;
