--- a/css/main.css
+++ b/css/main.css
@@ -345,8 +345,6 @@ h1 {
   text-align: center;
   color: var(--third-text-color);
   width: 360px;
-  height: 84px;
-  left: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -360,6 +358,7 @@ h1 {
 }
 
 .main-title__section {
+  padding: 118px 60px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -380,8 +379,6 @@ h1 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 
 @media screen and (min-width: 1px) and (max-width: 767px) {
@@ -414,6 +411,8 @@ h1 {
 @media screen and (min-width: 1200px) {
   .main-title {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
