--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,12 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .symbols__under {
+    width: 270px;
+  }
+}
+
 .symbols-list {
   margin-right: 0;
   margin-bottom: 30px;
@@ -412,7 +418,7 @@ h1 {
   .main-title {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img.jpg);
     padding-top: 200px;
-    padding-bottom: 200px;
+    padding-bottom: 280px;
   }
 }
 
@@ -1286,6 +1292,7 @@ button:focus {
   .main-title__btn {
     left: 700px;
     top: 430px;
+    margin-top: 30px;
   }
 }
 
