--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -4,6 +4,7 @@
   @media screen and (min-width: 1200px) {
     left: 700px;
     top: 430px;
+    margin-top: 30px;
   }
   background-color: var(--accent-color);
   font-family: Roboto, sans-serif;
