--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -67,6 +67,9 @@
     //   margin-bottom: 0;
     // }
   }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 
   padding: 30px 0 30px 0;
   // margin-bottom: 30px;
