--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ h1 {
   padding: 118px 60px;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
@@ -1286,6 +1287,7 @@ button:focus {
   text-align: center;
   letter-spacing: 0.03em;
   border: none;
+  margin-top: 30px;
 }
 
 @media screen and (min-width: 1200px) {
