--- a/sass/components/_title-section.scss
+++ b/sass/components/_title-section.scss
@@ -21,6 +21,7 @@ h1 {
   padding: 118px 60px;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
