--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,5 +1,11 @@
 // main index btn
-
+.open-menu-btn {
+  background-color: none;
+  margin-left: auto;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
 .main-title__btn {
   @media screen and (min-width: 1200px) {
     left: 700px;
