--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,7 @@
     padding-bottom: 24px;
     border-bottom: 1px solid #ececec;
   }
+  // width: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
@@ -14,9 +15,16 @@
       justify-content: space-between;
       align-items: center;
     }
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    @media screen and (min-width: 1px) and (max-width: 767px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
   }
   &__navigation {
     display: flex;
@@ -54,7 +62,13 @@
   }
 
   &__logo {
-    margin-right: 93px;
+    // @media screen and (max-width: 768px) {
+    //   margin-right: 200px;
+    // }
+    @media screen and (min-width: 1200px) {
+      margin-right: 93px;
+    }
+
     @media screen and (min-width: 768px) {
       margin-right: 88px;
     }
@@ -142,9 +156,4 @@
   align-self: center;
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.open-menu-btn {
-  background-color: none;
-  margin-left: auto;
 }
