--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -157,3 +157,6 @@
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.open-menu-btn__icon {
+  fill: black;
+}
