--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -160,3 +160,11 @@
 .open-menu-btn__icon {
   fill: black;
 }
+.mob-menu {
+  position: fixed;
+  background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  z-index: 5;
+}
