--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -15,6 +15,28 @@
 .open-menu-btn:focus .open-menu-btn__icon {
   fill: var(--accent-color);
 }
+.mob-menu__btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover,
+  &:focus {
+    background-color: #fff;
+  }
+  &:hover .mob-menu__btn__icon,
+  &:focus .mob-menu__btn__icon {
+    fill: var(--accent-color);
+  }
+}
 .main-title__btn {
   @media screen and (min-width: 1200px) {
     left: 700px;
