--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -161,6 +161,9 @@
   fill: black;
 }
 .mob-menu {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
   position: fixed;
   background-color: #fff;
   width: 100vw;
