--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -170,4 +170,35 @@
   height: 100vh;
   top: 0;
   z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+}
+.mob-menu-social__icon {
+  fill: #000;
+}
+.mob-menu-list__item {
+  margin-bottom: 32px;
+  &:last-child {
+    margin-bottom: 302px;
+  }
+}
+.mob-menu-list__link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  letter-spacing: 0.02em;
+
+  color: #212121;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.mob-menu__connect {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
