--- a/css/main.css
+++ b/css/main.css
@@ -187,12 +187,47 @@
   height: 100vh;
   top: 0;
   z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .mob-menu {
     display: none;
   }
+}
+
+.mob-menu-social__icon {
+  fill: #000;
+}
+
+.mob-menu-list__item {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__item:last-child {
+  margin-bottom: 302px;
+}
+
+.mob-menu-list__link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-menu-list__link:hover, .mob-menu-list__link:focus {
+  color: var(--accent-color);
+}
+
+.mob-menu__connect {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 :root {
@@ -1370,11 +1405,10 @@ button:focus {
   position: absolute;
   top: 10px;
   right: 15px;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
+  border: none;
   display: flex;
   align-items: center;
   justify-content: center;
