--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -19,11 +19,11 @@
   position: absolute;
   top: 10px;
   right: 15px;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
+  border: none;
+  // border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
