--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -50,7 +50,7 @@
     }
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       display: flex;
-      margin-left: 84px;
+      margin-left: 80px;
       flex-direction: column;
 
       // align-items: center;
@@ -58,9 +58,26 @@
     }
   }
   &__contacts:nth-of-type(1) {
-    margin-right: 50px;
+    @media screen and (min-width: 768px) {
+      margin-right: 0px;
+      margin-bottom: 10px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+      margin-bottom: 0px;
+    }
   }
-
+  &__contacts {
+    @media screen and (min-width: 768px) {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 0.02em;
+      color: #757575;
+    }
+  }
   &__logo {
     // @media screen and (max-width: 768px) {
     //   margin-right: 200px;
@@ -173,15 +190,21 @@
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 40px;
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
 .mob-menu-social__icon {
   fill: #000;
 }
 .mob-menu-list__item {
   margin-bottom: 32px;
-  &:last-child {
-    margin-bottom: 302px;
-  }
+  // &:last-child {
+  //   margin-bottom: 302px;
+  // }
 }
 .mob-menu-list__link {
   font-family: Roboto;
@@ -201,4 +224,58 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+}
+.mob-menu__contacts {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: calc(40 / 34);
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  margin-bottom: 32px;
+  // &:hover,
+  // &:focus {
+  //   color: var(--accent-color);
+  // }
+}
+.mob-menu__contacts-mail {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-bottom: 64px;
+}
+.mob-social {
+  display: flex;
+}
+.mob-menu-social-list {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.mob-menu-social__item {
+  margin-right: 20px;
+}
+.mob-menu-social__link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.line {
+  display: flex;
+  align-self: center;
+  width: 22px;
+  height: 0px;
+  // left: 135px;
+  // top: 726px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
