--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -13,24 +13,33 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
   }
-  // &-1 {
-  //   width: 500px;
-  //   margin: 0 auto;
-  //   padding-left: 15px;
-  //   padding-right: 15px;
-  // }
-  // &-2 {
-  //   width: 570px;
-  //   margin: 0 auto;
-  //   padding-left: 15px;
-  //   padding-right: 15px;
-  // }
-  // &-3 {
-  //   // width: 1200px;
-  //   width: 100%;
-  //   margin: 0 auto;
-  //   padding-left: 15px;
-  //   padding-right: 15px;
-  //   margin-bottom: 50px;
-  // }
+  &-1 {
+    width: 500px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  &-2 {
+    width: 570px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  &-3 {
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+    }
+    // width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 50px;
+  }
 }
