--- a/css/main.css
+++ b/css/main.css
@@ -1220,13 +1220,24 @@ h1 {
   display: flex;
   color: rgba(255, 255, 255, 0.6);
   padding-left: 16px;
-  width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: var(--bg-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form__input {
+    width: 358px;
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+  .subscribe-form__input {
+    width: 450px;
+  }
 }
 
 .subscribe-form__input::placeholder {
@@ -1709,17 +1720,51 @@ button:active, button:hover {
 }
 
 .container-1 {
-  width: 500px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
+@media screen and (min-width: 480px) {
+  .container-1 {
+    width: 262px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-1 {
+    width: 320px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-1 {
+    width: 500px;
+  }
+}
+
 .container-2 {
-  width: 570px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container-2 {
+    width: 249px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-2 {
+    width: 364.8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-2 {
+    width: 570px;
+  }
 }
 
 .container-3 {
