--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -123,6 +123,12 @@ button {
 // footer btn
 
 .subscribe-form__btn {
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+  }
+  @media screen and (min-width: 1px) and (max-width: 767px) {
+    margin-top: 20px;
+  }
   display: flex;
   justify-content: center;
   align-items: center;
