--- a/sass/components/_potrfolio.scss
+++ b/sass/components/_potrfolio.scss
@@ -1,11 +1,21 @@
+.main {
+  @media screen and (min-width: 1px) and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 .photo-list {
   display: flex;
   flex-wrap: wrap;
 }
 
 .photo-list__item {
-  margin: 0 13px 28px 13px;
-  flex-basis: calc(100% / 3 - 30px);
+  @media screen and (min-width: 1200px) {
+    margin: 0 13px 28px 13px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
+  width: 100%;
+
   border: 1px solid #ececec;
   transition: background-color 200ms linear, box-shadow 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -76,4 +86,16 @@ button:focus {
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   margin-top: 4px;
+}
+.portfolio-img {
+  width: 450px;
+  height: 294px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 294px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 294px;
+    height: 262px;
+  }
 }
