--- a/css/main.css
+++ b/css/main.css
@@ -1527,6 +1527,7 @@ textarea {
   border: 1px solid #ececec;
   transition: background-color 200ms linear, box-shadow 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1545,12 +1546,33 @@ textarea {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .photo-list__item {
+    flex-basis: calc(100% / 2 - 20px);
+    margin-right: 20px;
+    margin-bottom: 30px;
+  }
+  .photo-list__item:nth-of-type(2n) {
+    margin-right: 0;
+  }
+  .photo-list__item:nth-last-of-type(1) {
+    margin-bottom: 30px;
+  }
+  .photo-list__item:nth-last-of-type(9) {
+    margin-bottom: 0;
+  }
+}
+
 .photo-list__item:hover, .photo-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .photo-list__item:hover .photo-list__item__top {
   transform: translateY(0);
+}
+
+.photo-list__item:last-child {
+  margin-bottom: 0;
 }
 
 button:active,
@@ -1581,7 +1603,19 @@ button:focus {
 
 .photo-list__text {
   padding: 20px 24px 20px 24px;
-  width: 370px;
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .photo-list__text {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .photo-list__text {
+    width: 370px;
+  }
 }
 
 .photo-list__title {
