--- a/sass/components/_kinds_main.scss
+++ b/sass/components/_kinds_main.scss
@@ -15,5 +15,18 @@
 }
 
 .kinds-list {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  @media screen and (min-width: 1px) and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
+.kinds-list__item {
+  @media screen and (min-width: 1px) and (max-width: 767px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
 }
