--- a/sass/components/_kinds_main.scss
+++ b/sass/components/_kinds_main.scss
@@ -24,8 +24,18 @@
 
 .kinds-list__item {
   @media screen and (min-width: 1px) and (max-width: 767px) {
-    flex-basis: calc (100%/3 - 30px);
-    margin-left: 8px;
+    flex-basis: calc(100% / 3 - 30px);
+    margin-right: 8px;
     margin-bottom: 15px;
+    .kinds-list__item:nth-of-type(3) {
+      margin-right: 0;
+    }
+    .kinds-list__item:nth-of-type(5) {
+      margin-right: 0;
+      margin-bottom: 0;
+    }
+    .kinds-list__item:nth-of-type(4) {
+      margin-bottom: 0;
+    }
   }
 }
